# tak-rs

./: .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  index.html  llms.txt  robots.txt  rust-toolchain.toml  site.webmanifest
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: bench-baseline.md  cot-codec-reviewer.md  hot-path-perf.md  proto-vendor.md  unsafe-auditor.md
.claude/commands/: bench-hot.md  check-invariants.md  fuzz-codec.md  proto-sync.md  replay-pcap.md
.claude/hooks/: post-edit-cargo.sh  pre-edit-context.sh  stop-summary.sh
.githooks/: pre-commit  pre-push
.well-known/: security.txt
assets/brand/: README.md
assets/site/: humans.txt  index.html  llms-full.txt  llms.txt  robots.txt  site.webmanifest  sitemap.xml
assets/site/.well-known/: security.txt
bench/: README.md
bench/history/: 2026-04-27-parser-shootout.txt  java-baseline-2026-04-28T16-20-12Z.json  java-baseline-headline-2026-04-28T16-22-00Z.json  rust-compio-4w-2026-04-28T15-02-52Z.json  rust-compio-8w-2026-04-28T15-03-26Z.json  rust-compio-headline-2026-04-28T15-05-33Z.json  rust-compio-persist-4w-2026-04-28T15-14-05Z.json  rust-compio-persist-8w-2026-04-28T15-14-39Z.json  rust-compio-persist-headline-2026-04-28T15-15-24Z.json  rust-firehose-50k-2026-04-28T13-53-48Z.json  rust-nopersist-200k-2026-04-28T14-25-38Z.json  rust-nopersist-50k-2026-04-28T14-26-53Z.json  rust-persist-200k-2026-04-28T14-25-11Z.json  rust-persist-50k-2026-04-28T14-26-15Z.json  rust-quic-500x50-2026-04-28T16-46-44Z.json  rust-tokio-nopersist-2026-04-28T14-44-32Z.json  rust-tokio-nopersist-v2-2026-04-28T15-02-19Z.json  rust-tokio-persist-2026-04-28T14-44-05Z.json  rust-uring-nopersist-2026-04-28T14-45-26Z.json  rust-uring-persist-2026-04-28T14-44-59Z.json
bench/java/: .gitignore  CoreConfig.tpl.patch  CoreConfig.xml  Dockerfile  README.md  UserAuthenticationFile.xml  docker-compose.yml  start.sh
crates/tak-agent/: Cargo.toml
crates/tak-agent/src/: main.rs
crates/tak-bus/: Cargo.toml
crates/tak-bus-vopr/: Cargo.toml
crates/tak-bus-vopr/src/: alloc_mode.rs  main.rs  minimize.rs  model.rs  op.rs  repro.rs  runner.rs
crates/tak-bus/benches/: firehose.rs
crates/tak-bus/src/: dispatch.rs  index.rs  lib.rs
crates/tak-bus/tests/: loom_dispatch.rs  no_alloc.rs
crates/tak-config/: Cargo.toml
crates/tak-config/src/: lib.rs
crates/tak-conformance/: Cargo.toml
crates/tak-conformance/src/: lib.rs  mock_atak.rs  scenario.rs  scenarios.rs  server.rs
crates/tak-conformance/src/scenarios/: chat_xml_lossless.rs  dispatch_under_burst.rs  multi_publisher_no_crosstalk.rs  multi_subscriber_fanout.rs  pli_dispatch_byte_identity.rs  replay_on_reconnect.rs
crates/tak-conformance/tests/: local_scenarios.rs  run_scenarios.rs
crates/tak-cot/: Cargo.toml
crates/tak-cot/benches/: codec.rs
crates/tak-cot/fuzz/: .gitignore  Cargo.toml
crates/tak-cot/fuzz/corpus/decode_xml/: 02_chat.xml  03_geofence.xml  04_route.xml  05_drawing.xml
crates/tak-cot/fuzz/fuzz_targets/: decode_stream.rs  decode_xml.rs
crates/tak-cot/src/: framing.rs  lib.rs  proto.rs  xml.rs
crates/tak-cot/tests/: decode.rs  encode.rs  proptest_roundtrip.rs  proto.rs  roundtrip.rs
crates/tak-cot/tests/fixtures/: 01_pli.xml
crates/tak-mission/: Cargo.toml
crates/tak-mission/src/: lib.rs
crates/tak-mission/tests/: router.rs
crates/tak-net/: Cargo.toml
crates/tak-net/src/: auth.rs  conn.rs  lib.rs  listener.rs  tasks.rs  tls.rs
crates/tak-plugin-api/: Cargo.toml
crates/tak-plugin-api/src/: lib.rs
crates/tak-plugin-api/wit/: firehose.wit
crates/tak-plugin-host/: Cargo.toml
crates/tak-plugin-host/src/: bindings.rs  config.rs  event.rs  host.rs  lib.rs
crates/tak-plugin-host/tests/: load_with_toml.rs
crates/tak-proto/: Cargo.toml  UPSTREAM.md  build.rs
crates/tak-proto/src/: lib.rs
crates/tak-server/: Cargo.toml
crates/tak-server/src/: firehose.rs  firehose_compio.rs  firehose_quic.rs  group_policy.rs  lib.rs  main.rs  pipeline.rs
crates/tak-server/tests/: firehose.rs  pipeline.rs
crates/tak-soak/: Cargo.toml
crates/tak-soak/src/: analyze.rs  latency.rs  main.rs  metrics.rs  sampler.rs  server.rs
crates/tak-store/: Cargo.toml
crates/tak-store/migrations/: 100_add_wire_bytes_to_cot_router.sql
crates/tak-store/src/: lib.rs
crates/tak-store/tests/: migrations.rs
crates/taktool/: Cargo.toml
crates/taktool/src/: latency.rs  loadgen.rs  loadgen_quic.rs  loadgen_uring.rs  main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: agent.md  architecture.md  conformance.md  invariants.md  perf-comparison.md  personas.md
docs/decisions/: 0001-codec-parser.md  0002-tls-ciphers.md  0003-firehose-load-mix.md  0004-wasm-plugins.md
examples/plugins/echo-replace/: Cargo.toml
examples/plugins/echo-replace/src/: lib.rs
examples/plugins/geofence-redact/: Cargo.toml  README.md  geofence_redact.toml
examples/plugins/geofence-redact/src/: lib.rs
scripts/: bench-baseline.sh  bench-comparison.sh  bench-java-baseline.sh  build-android-agent.sh  capture-atak-handshake.sh  deploy-pages.sh  gen-mtls-certs.sh  install-deps.sh  install-hooks.sh  prune-bench-history.sh  run-agent-scenario.sh
