[package]
name         = "tak-bus-vopr"
description  = "Deterministic verification harness for tak-bus — drives millions of operations against a bus + abstract model + edge-case generator and asserts agreement."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

[[bin]]
name = "tak-bus-vopr"
path = "src/main.rs"

[dependencies]
tak-bus    .workspace = true
bytes      .workspace = true
clap = { workspace = true, features = ["env"] }
anyhow     .workspace = true
tokio      .workspace = true     # mpsc::Receiver::try_recv only; no runtime
# Seedable PRNG for deterministic op streams. ChaCha8 because we
# need bit-perfect reproducibility from a u64 seed; rand's default
# ThreadRng is non-seedable.
rand        = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_chacha = "0.3"
# dhat is wired as the global allocator unconditionally so
# `--alloc-mode` can read HeapStats. With no Profiler running, the
# overhead is two atomic adds per alloc — acceptable for a CI
# tool. Default-mode runs are still fast enough (~130k ops/s on
# the 100k-op default).
dhat       .workspace = true
serde      = { workspace = true, features = ["derive"] }
serde_json .workspace = true

[lints]
workspace = true
