[package]
name         = "tak-bus"
description  = "Subscription registry and message fan-out — the firehose core."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

# Stub: only GroupBitvector today. Deps come back when registry + dispatch land (M2).
[dependencies]

[dev-dependencies]
criterion  .workspace = true

[lints]
workspace = true

[[bench]]
name    = "firehose"
harness = false
