[package]
name         = "tak-bus"
description  = "Subscription registry and message fan-out — the firehose core."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

[dependencies]
sharded-slab .workspace = true
parking_lot  .workspace = true
rstar        .workspace = true
smallvec     .workspace = true
tokio        .workspace = true
bytes        .workspace = true

[dev-dependencies]
criterion .workspace = true
dhat      .workspace = true

[target.'cfg(loom)'.dev-dependencies]
loom = { workspace = true }

[lints]
workspace = true

[[bench]]
name    = "firehose"
harness = false
