[package]
name         = "tak-config"
description  = "CoreConfig.xml subset parser for tak-rs (strict; unknown sections error)."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

# Stub: only Error enum today. Parser deps land when implemented.
[dependencies]
thiserror  .workspace = true

[lints]
workspace = true
