[package]
name         = "tak-cot"
description  = "Cursor-on-Target codec (XML + TAK Protocol v1 protobuf framing)."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

[dependencies]
thiserror  .workspace = true
prost      .workspace = true
tak-proto  .workspace = true
quick-xml  .workspace = true
smallvec   .workspace = true
jiff       .workspace = true

[dev-dependencies]
proptest   .workspace = true
insta      .workspace = true
criterion  .workspace = true

[lints]
workspace = true

[[bench]]
name    = "codec"
harness = false
