[package]
name         = "tak-mission"
description  = "Mission API (REST + change feed) for tak-rs."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

[dependencies]
axum         .workspace = true
tower        .workspace = true
tower-http   .workspace = true
hyper        .workspace = true
tokio        .workspace = true
tokio-stream .workspace = true
serde        .workspace = true
serde_json   .workspace = true
tracing      .workspace = true
thiserror    .workspace = true
jiff         .workspace = true
tak-store    .workspace = true

[lints]
workspace = true
