[package]
name         = "tak-mission"
description  = "Mission API (REST + change feed) for tak-rs."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

# Stub: only Error enum today. Deps come back when endpoints land (M4).
[dependencies]
thiserror  .workspace = true
tak-store  .workspace = true

[lints]
workspace = true
