[package]
name         = "tak-mission"
description  = "Mission API (REST + change feed) for tak-rs."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

[dependencies]
axum        .workspace = true
tower-http  .workspace = true
thiserror   .workspace = true
tracing     .workspace = true
serde       .workspace = true
sqlx        .workspace = true
parking_lot .workspace = true
tak-store   .workspace = true

[dev-dependencies]
tokio  = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower  .workspace = true
http-body-util = "0.1"
testcontainers .workspace = true
serde_json     .workspace = true

[lints]
workspace = true
