[package]
name         = "tak-net"
description  = "Network listeners (TCP / TLS / UDP / multicast / QUIC) for tak-rs."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

[dependencies]
rustls       .workspace = true
tokio        .workspace = true
tokio-rustls .workspace = true
x509-parser  .workspace = true
tracing      .workspace = true
thiserror    .workspace = true

[dev-dependencies]
rcgen        .workspace = true

[lints]
workspace = true
