[package]
name         = "tak-net"
description  = "Network listeners (TCP / TLS / UDP / multicast / QUIC) for tak-rs."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

[dependencies]
rustls       .workspace = true
tokio        .workspace = true
tokio-rustls .workspace = true
x509-parser  .workspace = true
tracing      .workspace = true
thiserror    .workspace = true
quick-xml    .workspace = true
serde        .workspace = true
sha2         .workspace = true
dashmap      .workspace = true
metrics      .workspace = true
tak-bus      .workspace = true

[dev-dependencies]
rcgen        .workspace = true

[lints]
workspace = true
