[package]
name         = "tak-server"
description  = "tak-rs server binary."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

# Scaffold: only logs version + warn. Sub-crate deps land as their listeners
# / endpoints come online; see issues #16, #19, #34, etc.
[dependencies]
tokio              .workspace = true
tracing            .workspace = true
tracing-subscriber .workspace = true
anyhow             .workspace = true
mimalloc           .workspace = true

[[bin]]
name = "tak-server"
path = "src/main.rs"

# Binary opts out of unwrap/print bans inline via #![allow(...)] in main.rs.
[lints]
