[package]
name         = "tak-server"
description  = "tak-rs server binary."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

# Library + binary: the pipeline glue is library code so integration
# tests can drive it against a real bus + Postgres testcontainer.
[lib]
path = "src/lib.rs"

[[bin]]
name = "tak-server"
path = "src/main.rs"

[dependencies]
tokio              .workspace = true
tracing            .workspace = true
tracing-subscriber .workspace = true
anyhow             .workspace = true
mimalloc           .workspace = true
bytes              .workspace = true
thiserror          .workspace = true

tak-bus    .workspace = true
tak-store  .workspace = true
tak-proto  .workspace = true

[dev-dependencies]
testcontainers .workspace = true
sqlx           .workspace = true

# Binary opts out of unwrap/print bans inline via #![allow(...)] in main.rs.
# Library inherits workspace lints.
[lints]
workspace = true
