[package]
name         = "tak-store"
description  = "Postgres + PostGIS persistence for CoT events and mission data."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

[dependencies]
sqlx       .workspace = true
geo-types  .workspace = true
geozero    .workspace = true
bytes      .workspace = true
tracing    .workspace = true
thiserror  .workspace = true
jiff       .workspace = true
tak-cot    .workspace = true
tak-proto  .workspace = true

[lints]
workspace = true
