[package]
name         = "tak-store"
description  = "Postgres + PostGIS persistence for CoT events and mission data."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

[dependencies]
sqlx       .workspace = true
thiserror  .workspace = true
tokio      .workspace = true
tracing    .workspace = true
metrics    .workspace = true

[dev-dependencies]
tokio          = { workspace = true, features = ["rt-multi-thread", "macros", "test-util", "time"] }
testcontainers .workspace = true

[lints]
workspace = true
