[package]
name         = "taktool"
description  = "CLI tooling for tak-rs: pub, sub, replay, fuzz."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

[dependencies]
clap    .workspace = true
anyhow  .workspace = true
tak-cot .workspace = true

[[bin]]
name = "taktool"
path = "src/main.rs"

[lints]
