[package]
name         = "taktool"
description  = "CLI tooling for tak-rs: pub, sub, replay, fuzz."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true

[dependencies]
clap               .workspace = true
anyhow             .workspace = true
tracing            .workspace = true
tracing-subscriber .workspace = true
prost              .workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util", "signal"] }
tak-cot            .workspace = true

# io_uring driver — Linux-only, opt-in via `taktool loadgen --uring`.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.5"
socket2     = { workspace = true }

[[bin]]
name = "taktool"
path = "src/main.rs"

[lints]
workspace = true
