[package]
name         = "xtask"
description  = "Project automation for tak-rs (cargo xt <verb>)."
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
authors      .workspace = true
repository   .workspace = true
publish      = false

[dependencies]
clap   .workspace = true
anyhow .workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true
