[package]
name        = "tak-cot-fuzz"
description = "cargo-fuzz harnesses for tak-cot decoders."
version     = "0.0.0"
edition     = "2024"
publish     = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tak-cot       = { path = ".." }

[[bin]]
name              = "decode_xml"
path              = "fuzz_targets/decode_xml.rs"
test              = false
doc               = false
bench             = false

[[bin]]
name              = "decode_stream"
path              = "fuzz_targets/decode_stream.rs"
test              = false
doc               = false
bench             = false

# cargo-fuzz expects opt-level 3 for sane runtime; profile.release
# defaults are fine, but the `cargo fuzz` driver injects sanitizer
# flags via RUSTFLAGS at run time.
[profile.release]
debug          = 1
overflow-checks = true
